2017-02-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	Allow compilation with libressl
	* config/amanda/amanda_configure.m4: Change order
	* device-src/Makefile.am (libamdevice_la_LDFLAGS): Add -ldl
	* common-src/glib-util.c, device-src/s3-util.c, device-src/s3.c:
	  check for LIBRESSL_VERSION_NUMBER

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-server-custom-compress-no-exec.pl: Call
	  check_amreport with skip_size

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/calcsize.c: amflock(2,"size");
	* client-src/sendsize.c: Add amflock(1,"size");

2017-02-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: 'copyfile unpack (./.) failed' is normal
	  on restore

2017-02-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (get_sse42): Add default function

2017-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.2
	* VERSION: 3.4.2

2017-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Jason L Tibbitts III
	* server-src/amcheck.c: Remove spurious printf

2017-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/krb5-security.c (krb5_accept): Check result of setreuid

2017-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: Add a SPARSE property, default to YES
	* man/xml-source/ambsdtar.8.xml: Document it.

2017-01-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Fix output

2017-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Script_App.pm: Use config_init_with_global

2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amgetconf.pl: Add build.amperldir
	* perl/Amanda/Paths.pm.in: Export $amperldir

2017-01-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c: Add storage to message
	* server-src/amtape.pl: Use storage AUTOLABEL